--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "client:build": "cd client && npm run build",
     "client:dev": "cd client && npm run dev",
     "build": "cd client && npm install && npm run build",
-    "render-build": "npm install && cd client && npm install && npm run build"
+    "render-build": "npm install && cd client && npm install && npm run build",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7"
   }
 }
